# winostat

./: Cargo.toml  README.md
src/: consts.rs  main.rs  methods.rs  uptime.rs
