[package]
name = "winostat"
version = "1.0.0"
edition = "2021"
authors = ["rusty-aqude"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
systeminfo = { git = "https://github.com/marirs/systeminfo-rs", branch = "main" }
thiserror = "1.0.63"
libc = "0.2.155"
winreg = "0.10"
windows = { version = "0.58.0", features = ["Win32_System_SystemInformation"] }
sysinfo = "0.31.2"
regex = "1.10.6"
colored = "2.1.0"
